--- a/singlePageTemplate.css
+++ b/singlePageTemplate.css
@@ -1,52 +1,26 @@
-@charset "UTF-8";
+
 /* Body */
-body {
-	font-family: source-sans-pro;
-	background-color: #f2f2f2;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	font-style: normal;
-	font-weight: 200;
-}
-/* Container */
-.container {
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	height: 100%;
-	background-color: #FFFFFF;
-	margin-top: 0px;
-}
-/* Navigation */
-header {
-	background-color: #52bad5;
-	border-bottom: 1px solid #2C9AB7;
-	color: #fff;
-	font-weight: bold;
-	text-align: undefined;
-	width: 95%;
-	float: none;
-	margin-top: 18px;
-	letter-spacing: 4px;
-	padding-top: 2px;
-	padding-left: 5%;
-	margin-left: 0px;
-}
+
 .store {
-	background-color: #52bad5;
-	border-bottom: 1px solid #2C9AB7;
-	color: #fff;
-	font-weight: bold;
-	width: 70%;
-	float: none;
-	margin-top: 18px;
-	margin-left: 12%;
-	letter-spacing: 4px;
-	padding-top: 2px;
-	padding-left: 5%;
+    background-color: #52bad5;
+    border-bottom: 1px solid #2C9AB7;
+    color: #fff;
+    font-weight: bold;
+    width: 70%;
+   /* float: none;*/
+    margin-top: 18px;
+    margin-left: 12%;
+    letter-spacing: 4px;
+    padding-top: 2px;
+    padding-left: 3%;
+    padding-bottom: 3%;
+	/*text-align: center;*/
 }
+
+.store:hover {
+	cursor: pointer;
+}
+
 .logo {
 	color: #fff;
 	font-weight: bold;
@@ -57,6 +31,30 @@ header {
 	margin-left: 25px;
 	letter-spacing: 4px;
 }
+
+table{
+    background-color: #52bad5;
+    border: thin double #FFFFFF;
+    color: #fff;
+    font-weight: bold;
+    width: 70%;
+    /* [disabled]margin-top: 18px; */
+    margin-left: 12%;
+    letter-spacing: 4px;
+    display: block;
+}
+
+thead{
+    margin: 1%;
+    padding: 1%;
+    border: thin double #FFFFFF;
+}
+
+tbody{
+	height:360px;
+	overflow-y: auto;
+}
+
 nav {
 	float: right;
 	width: 50%;
@@ -67,6 +65,11 @@ header nav ul {
 	list-style: none;
 	float: right;
 }
+
+.center{
+	text-align:center;
+}
+
 nav ul li {
 	float: left;
 	color: #FFFFFF;
@@ -124,6 +127,11 @@ ul li:hover a {
 	padding-right: 20px;
 	color: #A3A3A3;
 }
+#scrollbar{
+    height: 360px;
+    overflow-y: auto;
+}
+
 .about {
 	padding-left: 25px;
 	padding-right: 25px;
@@ -200,92 +208,6 @@ ul li:hover a {
 	margin-left: 0px;
 }
 /* More info */
-footer {
-	background-color: #FFFFFF;
-	padding-bottom: 35px;
-}
-.footer_column {
-	width: 50%;
-	text-align: center;
-	padding-top: 30px;
-	float: left;
-}
-footer .footer_column h3 {
-	color: #B3B3B3;
-	text-align: center;
-}
-footer .footer_column p {
-	color: #717070;
-	background-color: #FFFFFF;
-}
-.cards {
-	width: 100%;
-	height: auto;
-	max-width: 400px;
-	max-height: 200px;
-}
-footer .footer_column p {
-	padding-left: 30px;
-	padding-right: 30px;
-	text-align: justify;
-	line-height: 25px;
-	font-weight: lighter;
-	margin-left: 20px;
-	margin-right: 20px;
-}
-.button {
-    width: 150px;
-    margin-top: 40px;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-left: auto;
-    padding-top: 20px;
-    padding-right: 10px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    text-align: center;
-    vertical-align: middle;
-    border-radius: 0px;
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 2px;
-    border: 3px solid #FFFFFF;
-    color: #FFFFFF;
-    transition: all 0.3s linear;
-}
-.button:hover {
-	background-color: #FEFEFE;
-	color: #C4C4C4;
-	cursor: pointer;
-}
-.copyright {
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: #717070;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	font-weight: lighter;
-	letter-spacing: 2px;
-	border-top-width: 2px;
-}
-.footer_banner {
-	background-color: #B3B3B3;
-	padding-top: 60px;
-	padding-bottom: 60PX;
-	margin-bottom: 0px;
-	background-image: url(../images/pattern.png);
-	background-repeat: repeat;
-}
-footer {
-	display: inline-block;
-}
-.hidden {
-	display: none;
-}
-form .hero_header button {
-}
-
 
 /* Mobile */
 @media (max-width: 320px) {
@@ -395,20 +317,8 @@ nav ul li {
 	display: inline-block;
 	background: #52bad5;
 }
-header nav ul {
-	padding: 0px;
-	float: none;
-}
-nav ul li {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	width: 100%;
-	text-align: center;
-	padding-top: 8px;
-	padding-bottom: 8px;
-}
+
+
 .text_column {
 	width: 100%;
 	text-align: left;
@@ -420,10 +330,7 @@ nav ul li {
 .thumbnail {
 	width: 100%;
 }
-.footer_column {
-	width: 100%;
-	margin-top: 0px;
-}
+
 .parallax {
 	text-align: center;
 	margin-top: 0px;
@@ -475,9 +382,7 @@ nav ul li {
 	padding-left: 20px;
 	padding-right: 20px;
 }
-.footer_column {
-	width: 100%;
-}
+
 }
 
 /* Small Desktops */
